--- a/pages/loginUpload.html
+++ b/pages/loginUpload.html
@@ -83,7 +83,7 @@
     <div class="login-wrapper">
         <div class="header">Login</div>
         <div class="form-wrapper">
-            <form id="upload-form" action="https://glassysky.cn/uploadVerify" method="post" enctype="multipart/form-data">
+			<form id="upload-form" action="https://glassysky.cn/{{ .action }}" method="post" enctype="multipart/form-data">
                 <input type="text" name="username" placeholder="username" class="input-item">
                 <input type="password" name="password" placeholder="password" class="input-item">
                 <input type="submit" class="btn" value="login" />
