optimise download page

--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
 <main class="form-signin w-100 m-auto">
   <form action="https://glassysky.cn/{{ .action }}" method="post" enctype="multipart/form-data">
     <img class="mb-4" src="../pages/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">欢迎使用在线文件系统，请登录</h1>
 
     <div class="form-floating">
       <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
