--- a/pages/download.html
+++ b/pages/download.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>文件下载</title>
-    <link rel="stylesheet" type="text/css" href="../pages/download_style.css">
+    <title>online storage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="services-section">
-<div class="fav_list">
-    <div class="fav_list_box">
-        <h1>download</h1>
-        <div class="my_fav_con">
-            <ul class="my_fav_list">
-                {{ range .files }}
-                <li class="my_fav_list_li">
-                    <a class="my_fav_list_a" href="https://glassysky.cn/resource/{{ . }}">{{ . }}</a>
-                    <label>
-                        <a class="my_fav_list_label" href="https://glassysky.cn/delete?filename={{ . }}">删除文件</a>
-                    </label>
-                </li>
-                {{ end }}
-            </ul>
-
+<body>
+<div class="container mt-3">
+    <div class="container mt-5 mb-3 pb-3 border-bottom">
+	    <h1 class="text-center">在线文件存储系统</h1>
+    </div>
+    {{ range .files }}
+    <div class="card w-auto m-3 float-start bg-info text-white">
+        <div class="card-body">
+            <h4 class="card-title">{{ . }}</h4>
+            <p class="card-text">The description of file.</p>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle btn-sm" data-bs-toggle="dropdown">Action</button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://glassysky.cn/resource/{{ . }}">Download</a></li>
+                    <li><a class="dropdown-item" href="https://glassysky.cn/delete?filename={{ . }}">Delete</a></li>
+                </ul>
+            </div>
         </div>
     </div>
+    {{ end }}
 </div>
+
 </body>
 </html>
