--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
 
 						</div>
 					</div>
-					<div class="service-box" onclick="window.open('http://glassysky.cn/today', '_self')">
+					<div class="service-box" onclick="window.open('/today', '_self')">
 						<div class="service-icon">
 							<i class="fas fa-brush"></i>
 						</div>
@@ -38,7 +38,7 @@
 						</div>
 					</div>
 					<div class="service-box">
-						<div class="service-icon" onclick="window.open('https://glassysky.cn/loginUpload', '_self')">
+						<div class="service-icon" onclick="window.open('/loginUpload', '_self')">
 							<i class="fas fa-object-ungroup"></i>
 						</div>
 						<div class="service-title">资源上传</div>
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 					<div class="service-box">
-						<div class="service-icon" onclick="window.open('https://glassysky.cn/loginDownload', '_self')">
+						<div class="service-icon" onclick="window.open('/loginDownload', '_self')">
 							<i class="fas fa-paint-brush"></i>
 						</div>
 						<div class="service-title">资源下载</div>
