optimise action after upload

--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
-  <form action="https://glassysky.cn/{{ .action }}" method="post" enctype="multipart/form-data">
+  <form action="/{{ .action }}" method="post" enctype="multipart/form-data">
     <img class="mb-4" src="../pages/bootstrap-logo.svg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">欢迎使用在线文件系统，请登录</h1>
 
