modify description of upload

--- a/pages/download.html
+++ b/pages/download.html
@@ -86,13 +86,13 @@
 
             <!-- 模态框头部 -->
             <div class="modal-header">
-                <h4 class="modal-title">模态框标题</h4>
+                <h4 class="modal-title">上传文件</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
 
             <!-- 模态框内容 -->
             <div class="modal-body">
-                模态框内容..
+                请选择需要上传的文件（支持多选）
                 <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data" >
                     <input class="form-control" type="file" name="upload" id="upload" multiple />
                     <!-- <input type="file" class="select-file" multiple="multiple" id="upload" name="upload"/> -->
