remove upload page

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,31 +28,31 @@
 
 						</div>
 					</div>
+					<div class="service-box">
+						<div class="service-icon" onclick="window.open('/loginDownload', '_self')">
+							<i class="fas fa-desktop"></i>
+						</div>
+						<div class="service-title">云文件系统</div>
+						<div class="service-desc">
+						浮世千百年来风景依旧，人之在世却如白露与泡影。——雷电将军
+						</div>
+					</div>
 					<div class="service-box" onclick="window.open('/today', '_self')">
 						<div class="service-icon">
 							<i class="fas fa-brush"></i>
 						</div>
-						<div class="service-title">今日运势</div>
+						<div class="service-title">抽一签</div>
 						<div class="service-desc">
 					    今日运势小程序，点击图标查看结果，来看看今天运势如何？
 						</div>
 					</div>
 					<div class="service-box">
-						<div class="service-icon" onclick="window.open('/loginUpload', '_self')">
+						<div class="service-icon">
 							<i class="fas fa-object-ungroup"></i>
 						</div>
-						<div class="service-title">资源上传</div>
+						<div class="service-title">待开发</div>
 						<div class="service-desc">
 					        勇气不也是这样吗?一帆风顺的人不会明白它的可贵,可当你身处绝境,勇气就是令你奋起抗争、走出绝境的唯之光。——温迪	
-						</div>
-					</div>
-					<div class="service-box">
-						<div class="service-icon" onclick="window.open('/loginDownload', '_self')">
-							<i class="fas fa-paint-brush"></i>
-						</div>
-						<div class="service-title">资源下载</div>
-						<div class="service-desc">
-						浮世千百年来风景依旧，人之在世却如白露与泡影。——雷电将军
 						</div>
 					</div>
 					<div class="service-box">
