add quit button

--- a/pages/download.html
+++ b/pages/download.html
@@ -37,8 +37,11 @@
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-warning" type="submit">Search</button>
+                <button class="btn btn-warning text-nowrap" type="submit">查找</button>
             </form>
+			<div class="ms-2">
+				<button class="btn btn-danger"><a class="text-white" href="/logout" style="text-decoration:none">退出</a></button>
+			</div>
         </div>
     </div>
 </nav>
