--- a/pages/download.html
+++ b/pages/download.html
@@ -96,13 +96,21 @@
             <!-- 模态框内容 -->
             <div class="modal-body">
                 请选择需要上传的文件（支持多选）
-                <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data" >
-                    <input class="form-control" type="file" name="upload" id="upload" multiple />
+                <form id="upload-form" enctype="multipart/form-data" >
+                    <input class="form-control" type="file" name="upload" id="file-input" multiple />
                     <!-- <input type="file" class="select-file" multiple="multiple" id="upload" name="upload"/> -->
                     <hr>
                     <button type="submit" class="btn btn-primary">上传</button>
                     <!--                            <input type="submit" value="上传" />-->
                 </form>
+				<div id="progress-area" class="pt-3" style="display: none">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="text-center pt-3">
+                        <span id="progress-text">0%</span>
+                    </div>
+                </div>
             </div>
 
             <!-- 模态框底部 -->
@@ -132,6 +140,58 @@
 				}
 			});
 		});
+
+		$('#upload-form').submit(function(event) {
+			event.preventDefault(); // 阻止表单默认提交行为
+
+			var files = $('#file-input')[0].files;
+			if (files.length == 0) {
+				alert('请选择要上传的文件');
+				return false;
+			}
+
+			// 创建XMLHttpRequest对象
+			var xhr = new XMLHttpRequest();
+
+			// 监听上传进度事件
+			xhr.upload.addEventListener('progress', function(event) {
+				if (event.lengthComputable) {
+					var percent = Math.round((event.loaded / event.total) * 100);
+					$('.progress-bar').css('width', percent + '%').attr('aria-valuenow', percent);
+					$('#progress-text').text(percent + '%');
+				}
+			});
+
+			// 监听上传完成事件
+			xhr.addEventListener('load', function() {
+				alert('上传成功！');
+				$('#progress-area').hide();
+				var responseHTML = xhr.responseText;
+                document.write(responseHTML);
+
+			});
+
+			// 监听上传错误事件
+			xhr.addEventListener('error', function() {
+				alert('上传失败！');
+				$('#progress-area').hide();
+				var responseError = xhr.responseText;
+				alert(responseError)
+
+			});
+
+			// 开始上传
+			xhr.open('POST', '/upload');
+			var formData = new FormData();
+			for (var i = 0; i < files.length; i++) {
+				formData.append('upload', files[i]);
+			}
+			xhr.send(formData);
+
+			// 显示上传进度条
+			$('#progress-area').show();
+		});
+
     });
 </script>
 </body>
