justify start page

--- a/pages/index.html
+++ b/pages/index.html
@@ -46,11 +46,11 @@
 					    今日运势小程序，点击图标查看结果，来看看今天运势如何？
 						</div>
 					</div>
-					<div class="service-box">
+					<div class="service-box" onclick="window.open('http://glassysky.cn:8080/wp-admin/index.php', '_self')">
 						<div class="service-icon">
 							<i class="fas fa-object-ungroup"></i>
 						</div>
-						<div class="service-title">待开发</div>
+						<div class="service-title">写博客</div>
 						<div class="service-desc">
 					        勇气不也是这样吗?一帆风顺的人不会明白它的可贵,可当你身处绝境,勇气就是令你奋起抗争、走出绝境的唯之光。——温迪	
 						</div>
