add view change function

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
 						</div>
 					</div>
 					<div class="service-box">
-						<div class="service-icon" onclick="window.open('/download', '_self')">
+						<div class="service-icon" onclick="window.open('/download_list', '_self')">
 							<i class="fas fa-desktop"></i>
 						</div>
 						<div class="service-title">云文件系统</div>
