--- a/pages/login.html
+++ b/pages/login.html
@@ -55,7 +55,7 @@
           if (xhr.status === 200) {
             // 成功接收到响应，打印出响应内容并将响应的 HTML 页面显示在页面上
             console.log(xhr.responseText);
-			window.location.href="/download";
+			window.location.href="/download_list";
             // var responseHTML = xhr.responseText;
             // document.write(responseHTML);
           } else {
