--- a/pages/download_card.html
+++ b/pages/download_card.html
@@ -95,7 +95,7 @@
                     文件上传
                 </button>
                 <a href="/download_list" class="list-group-item list-group-item-action text-center">视图切换</a>
-                <a href="#" class="list-group-item list-group-item-action text-center">登出</a>
+                <a href="#" class="list-group-item list-group-item-action text-center">分类</a>
             </div>
         </div>
     </div>
@@ -152,7 +152,6 @@
 					alert("Error: " + xhr.status + " " + xhr.statusText + ", " + xhr.responseText)
                 },
                 success:function(res){
-                    alert(res);
 					$("#"+uname).remove();
 				}
 			});
@@ -184,7 +183,7 @@
 				$('#progress-area').hide();
 				//var responseHTML = xhr.responseText;
                 //document.write(responseHTML);
-				window.location.href="/download";
+				window.location.href="/download_card";
 
 			});
 
