--- a/pages/download_card.html
+++ b/pages/download_card.html
@@ -9,43 +9,7 @@
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary fixed-top">
-    <div class="container-fluid" style="height: 50px">
-        <a class="navbar-brand text-white" href="#">Navigate</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-warning text-nowrap" type="submit">查找</button>
-            </form>
-			<div class="ms-2">
-				<button class="btn btn-danger"><a class="text-white" href="/logout" style="text-decoration:none">退出</a></button>
-			</div>
-        </div>
-    </div>
-</nav>
-<div style="height: 50px;"></div>
+{{ template "nav.html" . }}
 <div class="row mt-2">
     <div class="col-sm-2">
         <div class="container mt-3 border-end border-start">
@@ -138,81 +102,6 @@
         </div>
     </div>
 </div>
-<script>
-    $(document).ready(function(){
-		$(".delete-btn").click(function(){
-            var filename = $(this).attr("name");
-			if (confirm("是否确认删除文件 " + filename) == false) {
-                return;
-            }
-			var uname = $(this).attr("uname");
-            var url = "/delete?filename=" + filename;
-            $.ajax({url:url,
-                error:function(xhr){
-					alert("Error: " + xhr.status + " " + xhr.statusText + ", " + xhr.responseText)
-                },
-                success:function(res){
-					$("#"+uname).remove();
-				}
-			});
-		});
-		$('#upload-form').submit(function(event) {
-			event.preventDefault(); // 阻止表单默认提交行为
-
-			var files = $('#file-input')[0].files;
-			if (files.length == 0) {
-				alert('请选择要上传的文件');
-				return false;
-			}
-
-			// 创建XMLHttpRequest对象
-			var xhr = new XMLHttpRequest();
-
-			// 监听上传进度事件
-			xhr.upload.addEventListener('progress', function(event) {
-				if (event.lengthComputable) {
-					var percent = Math.round((event.loaded / event.total) * 100);
-					$('.progress-bar').css('width', percent + '%').attr('aria-valuenow', percent);
-					$('#progress-text').text(percent + '%');
-				}
-			});
-
-			// 监听上传完成事件
-			xhr.addEventListener('load', function() {
-				alert('上传成功，请刷新页面！');
-				$('#progress-area').hide();
-				//var responseHTML = xhr.responseText;
-                //document.write(responseHTML);
-				window.location.href="/download_card";
-
-			});
-
-			// 监听上传错误事件
-			xhr.addEventListener('error', function() {
-				alert('上传失败！');
-				$('#progress-area').hide();
-				var responseError = xhr.responseText;
-				alert(responseError)
-
-			});
-
-			// 开始上传
-			xhr.open('POST', '/upload');
-			var formData = new FormData();
-			for (var i = 0; i < files.length; i++) {
-				formData.append('upload', files[i]);
-			}
-			xhr.send(formData);
-
-			// 显示上传进度条
-			$('#progress-area').show();
-		});
-
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        });
-    });
-</script>
+<script src="../pages/download.js"></script>
 </body>
 </html>
