--- a/assets/nav.html
+++ b/assets/nav.html
@@ -17,7 +17,7 @@
             <a id="yunpan" class="nav-link" href="/download_list">云盘</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/today">运势</a>
+            <a id="luck" class="nav-link" href="/today">运势</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="http://glassysky.cn:8080/wp-admin/index.php">写博客</a>
