--- a/assets/luck.html
+++ b/assets/luck.html
@@ -64,7 +64,7 @@
 $(document).ready(function(){
 	$("#luck").addClass("active");
     $('#resetLuck').click(function() {
-		window.location.href="/todayAgain";
+		window.location.href="/resetToday";
   });
 });
 </script>
