--- a/assets/index.html
+++ b/assets/index.html
@@ -15,6 +15,7 @@
     <div class="col-sm-2">
         <div class="container mt-3 border-end border-start">
 			<div class="list-group list-group-flush">
+                <h5 class="list-group-item list-group-item-action text-center text-secondary">常用应用</h5>
                 <a href="https://www.bilibili.com" class="list-group-item list-group-item-action text-center">bilibili</a>
                 <a href="https://music.163.com" class="list-group-item list-group-item-action text-center">网易云音乐</a>
                 <a href="https://www.bing.com" class="list-group-item list-group-item-action text-center">bing</a>
