--- a/assets/login.html
+++ b/assets/login.html
@@ -32,7 +32,7 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-secondary" type="submit">登录</button>
+    <button class="w-100 btn btn-lg btn-dark" type="submit">登录</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2023–2028</p>
   </form>
 </main>
