--- a/assets/nav.html
+++ b/assets/nav.html
@@ -14,13 +14,13 @@
             <a class="nav-link" href="http://glassysky.cn:8080">个人博客</a>
           </li>
           <li class="nav-item">
-            <a id="yunpan" class="nav-link" href="/download_list">云盘</a>
+            <a id="yunpan" class="nav-link" href="/download_list">在线云盘</a>
           </li>
           <li class="nav-item">
-            <a id="luck" class="nav-link" href="/today">运势</a>
+            <a id="luck" class="nav-link" href="/today">每日一签</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://glassysky.cn:8080/wp-admin/index.php">写博客</a>
+            <a class="nav-link" href="http://glassysky.cn:8080/wp-admin/index.php">博客登录</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
