--- a/assets/nav.html
+++ b/assets/nav.html
@@ -10,25 +10,21 @@
           <li class="nav-item">
             <a id="home" class="nav-link" aria-current="page" href="/">主页</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://glassysky.cn:8080">个人博客</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">个人博客</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="http://glassysky.cn:8080">浏览博客</a></li>
+              <li><a class="dropdown-item" href="http://glassysky.cn:8080/wp-admin/index.php">博主登录</a></li>
+            </ul>
           </li>
           <li class="nav-item">
-            <a id="yunpan" class="nav-link" href="/download_list">在线云盘</a>
+            <a id="yunpan" class="nav-link" href="/download_list">云文件系统</a>
           </li>
           <li class="nav-item">
             <a id="luck" class="nav-link" href="/today">每日一签</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://glassysky.cn:8080/wp-admin/index.php">博客登录</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link" href="/chat">聊天室v1.0</a>
           </li>
         </ul>
         <form role="search">
