--- a/assets/chat.html
+++ b/assets/chat.html
@@ -1,54 +1,72 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Melody example: chatting</title>
+        <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+        <style>
+            #chat {
+                text-align: left;
+                background: #f1f1f1;
+                width: 500px;
+                min-height: 300px;
+                padding: 20px;
+            }
+        </style>
     </head>
 
-    <style>
-        #chat {
-            text-align: left;
-            background: #f1f1f1;
-            width: 500px;
-            min-height: 300px;
-            padding: 20px;
-        }
-    </style>
-
     <body>
+    <span id="username" hidden>{{ .username }}</span>
         <center>
             <h3>Chat</h3>
             <pre id="chat"></pre>
             <input placeholder="say something" id="text" type="text">
+            <button type="button" id="send" class="btn btn-primary">发送</button>
         </center>
 
         <script>
-			var name = "";
-			var name = prompt("please input your name for chat");
-			if (name == "") {
-				name = "Guest" + Math.floor(Math.random() * 1000);
-			}
-            var url = "wss://" + window.location.host + "/wschat";
-            var ws = new WebSocket(url);
-            //var name = "Guest" + Math.floor(Math.random() * 1000);
+            $(document).ready(function(){
 
-            var chat = document.getElementById("chat");
-            var text = document.getElementById("text");
+                /*
+                var name = "";
+                var name = prompt("please input your name for chat");
+                if (name == "") {
+                    name = "Guest" + Math.floor(Math.random() * 1000);
+                }*/
 
-            var now = function () {
-                var iso = new Date().toISOString();
-                return iso.split("T")[1].split(".")[0];
-            };
+                var name = $("#username").text();
 
-            ws.onmessage = function (msg) {
-                var line =    now() + " " + msg.data + "\n";
-                chat.innerText += line;
-            };
+                var url = "wss://" + window.location.host + "/wschat";
+                var ws = new WebSocket(url);
+                //var name = "Guest" + Math.floor(Math.random() * 1000);
 
-            text.onkeydown = function (e) {
-                if (e.keyCode === 13 && text.value !== "") {
+                var chat = document.getElementById("chat");
+                var text = document.getElementById("text");
+
+                var now = function () {
+					var date = new Date(new Date().getTime()+(parseInt(new Date().getTimezoneOffset()/60) + 8)*3600*1000).toString();
+					var dateArr = date.split(" ");
+					return dateArr[1] + " " + dateArr[2] + " " + dateArr[3] + " " + dateArr[4];
+                };
+
+                ws.onmessage = function (msg) {
+                    var line =    now() + "\n" + msg.data + "\n";
+                    chat.innerText += line;
+                };
+
+                //text.onkeydown = sendMsg(e);
+                text.onkeydown = function(e) {
+                    if (e.keyCode === 13 && text.value !== "") {
+                        ws.send("<" + name + "> " + text.value);
+                        text.value = "";
+                    }
+                };
+
+                $("#send").click(function() {
                     ws.send("<" + name + "> " + text.value);
                     text.value = "";
-                }
-            };
+                });
+
+            });
 
         </script>
     </body>
