--- a/assets/chat.html
+++ b/assets/chat.html
@@ -1,73 +1,95 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Melody example: chatting</title>
-        <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-        <style>
-            #chat {
-                text-align: left;
-                background: #f1f1f1;
-                width: 500px;
-                min-height: 300px;
-                padding: 20px;
-            }
-        </style>
-    </head>
+<head>
+	<title>Chatroom</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+	<style>
+		#chat {
+			text-align: left;
+			background: #f1f1f1;
+			min-height: 500px;
+			padding: 20px;
+		}
+		#send {
+			cursor: pointer;
+		}
+	</style>
+</head>
+<body>
+<span id="username" hidden>{{ .username }}</span>
+{{ template "nav.html" . }}
+<div class="row mt-2">
+    <div class="col-sm-4">
+        <div class="container mt-3 border-end border-start">
+        </div>
+    </div>
+    <div class="col-sm-4 mt-3 mb-3 bg-secondary">
+        <div class="container mt-4 mb-3">
+			<div class="input-group mt-2">
+				<input placeholder="say something" id="text" type="text" class="form-control">
+				<span class="input-group-text bg-primary" id="send">发&nbsp;送</span>
+			</div>
+        </div>
+		<div class="mt-3 ms-4 me-4 mb-5">
+			<pre id="chat"></pre>
+		</div>
+    </div>
+    <div class="col-sm-4">
+        <div class="container mt-3 border-end border-start">
+        </div>
+    </div>
+</div>
 
-    <body>
-    <span id="username" hidden>{{ .username }}</span>
-        <center>
-            <h3>Chat</h3>
-            <pre id="chat"></pre>
-            <input placeholder="say something" id="text" type="text">
-            <button type="button" id="send" class="btn btn-primary">发送</button>
-        </center>
+<script>
+	$(document).ready(function(){
 
-        <script>
-            $(document).ready(function(){
+		/*
+		var name = "";
+		var name = prompt("please input your name for chat");
+		if (name == "") {
+			name = "Guest" + Math.floor(Math.random() * 1000);
+		}*/
 
-                /*
-                var name = "";
-                var name = prompt("please input your name for chat");
-                if (name == "") {
-                    name = "Guest" + Math.floor(Math.random() * 1000);
-                }*/
+		var name = $("#username").text();
 
-                var name = $("#username").text();
+		var url = "wss://" + window.location.host + "/wschat";
+		var ws = new WebSocket(url);
+		//var name = "Guest" + Math.floor(Math.random() * 1000);
 
-                var url = "wss://" + window.location.host + "/wschat";
-                var ws = new WebSocket(url);
-                //var name = "Guest" + Math.floor(Math.random() * 1000);
+		var chat = document.getElementById("chat");
+		var text = document.getElementById("text");
 
-                var chat = document.getElementById("chat");
-                var text = document.getElementById("text");
+		var now = function () {
+			var date = new Date(new Date().getTime()+(parseInt(new Date().getTimezoneOffset()/60) + 8)*3600*1000).toString();
+			var dateArr = date.split(" ");
+			return dateArr[1] + " " + dateArr[2] + " " + dateArr[3] + " " + dateArr[4];
+		};
 
-                var now = function () {
-					var date = new Date(new Date().getTime()+(parseInt(new Date().getTimezoneOffset()/60) + 8)*3600*1000).toString();
-					var dateArr = date.split(" ");
-					return dateArr[1] + " " + dateArr[2] + " " + dateArr[3] + " " + dateArr[4];
-                };
+		ws.onmessage = function (msg) {
+			var line =    now() + "\n" + msg.data + "\n";
+			chat.innerText = line + chat.innerText;
+		};
 
-                ws.onmessage = function (msg) {
-                    var line =    now() + "\n" + msg.data + "\n";
-                    chat.innerText += line;
-                };
+		//text.onkeydown = sendMsg(e);
+		text.onkeydown = function(e) {
+			if (e.keyCode === 13 && text.value !== "") {
+				ws.send("<" + name + "> " + text.value);
+				text.value = "";
+			}
+		};
 
-                //text.onkeydown = sendMsg(e);
-                text.onkeydown = function(e) {
-                    if (e.keyCode === 13 && text.value !== "") {
-                        ws.send("<" + name + "> " + text.value);
-                        text.value = "";
-                    }
-                };
+		$("#send").click(function() {
+			ws.send("<" + name + "> " + text.value);
+			text.value = "";
+		});
 
-                $("#send").click(function() {
-                    ws.send("<" + name + "> " + text.value);
-                    text.value = "";
-                });
+	});
 
-            });
-
-        </script>
-    </body>
+</script>
+</body>
 </html>
