--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>online storage</title>
+    <title>home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
